<resources>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_bk_login">Back to Login</string>

    <string name="app_name">Calories Counter</string>
    <string name="info">Before you cotinue, we need some informations:</string>
    <string name="tv_gender">Gender:</string>
    <string name="rb_female">Female:</string>
    <string name="rb_male">Male:</string>
    <string name="tv_birthday">Age</string>
    <string name="tv_height">Height</string>
    <string name="hint_birthday">21</string>
    <string name="hint_height">170</string>
    <string name="tv_weight">Weight</string>
    <string name="tv_goal_weight">Goal Weight</string>
    <string name="hint_weight">70</string>
    <string name="hint_goal_weight">70</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="date"></string>

    <string name="btn_meals">Meals</string>
    <string name="btn_activities">Activities</string>
    <string name="btn_update">Update</string>

    <string name="tv_meals">Meals</string>
    <string name="btn_add_meal">Add Meal</string>

    <string name="tv_activities">Activities</string>
    <string name="btn_add_activity">Add Activity</string>

    <string name="hint_name">Name</string>
    <string name="btn_add">Add</string>

    <string name="tv_add_meal">Add Meal</string>
    <string name="hint_brand">Brand</string>
    <string name="hint_serving_size">Serving Size(1 Cup, 1 Slice, etc.)</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_protein">Protein (g)</string>
    <string name="hint_fat">Fat (g)</string>
    <string name="hint_carbs">Carbs (g)</string>

    <string name="tv_add_activity">Add Activity</string>
    <string name="hint_duration">Duration (in minutes)</string>
    <string name="hint_calories_burned">Calories Burned</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_image_description">Profile Image</string>
    <string name="btn_change_photo">Change photo</string>
    <string name="btn_share_photo">Share Photo</string>
    <string name="btn_profile">Go To Profile</string>
</resources>
