<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp"
    tools:context=".Profile_Fragment">

    <ImageView
        android:id="@+id/iv_user_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/my_image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_change_photo"
        app:layout_constraintBottom_toTopOf="@id/tv_bmi"
        />
<!--    android:src="@drawable/no_profile"-->

    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColorPink"
        android:text="@string/btn_change_photo"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/btn_share"
        app:layout_constraintLeft_toRightOf="@id/iv_user_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@color/buttonColorPink"
        android:text="@string/btn_share_photo"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/tv_user_gender"
        app:layout_constraintLeft_toRightOf="@id/iv_user_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo" />

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI:"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/tv_user_birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_user_gender"
        app:layout_constraintTop_toBottomOf="@id/iv_user_image" />

    <TextView
        android:id="@+id/tv_user_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/tv_user_height"
        app:layout_constraintLeft_toRightOf="@id/tv_bmi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_image" />

    <TextView
        android:id="@+id/tv_user_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_birthday"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/tv_user_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_user_height"
        app:layout_constraintTop_toBottomOf="@id/tv_bmi" />

    <TextView
        android:id="@+id/tv_user_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_height"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/tv_user_goal_weight"
        app:layout_constraintLeft_toRightOf="@id/tv_user_birthday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_gender" />

    <TextView
        android:id="@+id/tv_user_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_weight"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_user_goal_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_user_birthday" />

    <TextView
        android:id="@+id/tv_user_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_goal_weight"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_user_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_height" />

</androidx.constraintlayout.widget.ConstraintLayout>