<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    tools:context=".Register_Fragment">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/til_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/tv_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_gender"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/rg_gender"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tv_birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_gender">

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_female"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_male"
            android:textColor="@color/textColor"
            app:layout_constraintBottom_toTopOf="@id/tv_birthday"
            app:layout_constraintLeft_toRightOf="@id/radio_female"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />
    </RadioGroup>


    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_birthday"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/til_birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_height"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_height"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/til_birthday"
        app:layout_constraintLeft_toRightOf="@id/tv_birthday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_birthday"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/tv_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/til_height"
        app:layout_constraintTop_toBottomOf="@id/tv_birthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_birthday"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_height"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/tv_goal_weight"
        app:layout_constraintLeft_toRightOf="@id/til_birthday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_height">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_height"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_weight"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/til_weight"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_goal_weight"
        app:layout_constraintTop_toBottomOf="@id/til_birthday" />

    <TextView
        android:id="@+id/tv_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tv_goal_weight"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/til_goal_weight"
        app:layout_constraintLeft_toRightOf="@id/tv_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_height" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_weight"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/til_goal_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_weight"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_goal_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_goal_weight"
        android:textColorHint="@color/colorHint"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintLeft_toRightOf="@id/til_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_goal_weight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_goal_weight"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:text="@string/btn_sign_up"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/btn_back_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_weight" />

    <Button
        android:id="@+id/btn_back_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColorPink"
        android:text="@string/btn_bk_login"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>